# src/index.ts
@@ -1,18 +1,23 @@
 import express, {Request,Response,Application, NextFunction} from 'express';
 import accountController from './controllers/accountController';
-import crypto from "crypto";
-import IRequest from './controllers/IRequest';
 import usersController from './controllers/usersController';
 import AuthService from './services/AuthService';
 import ErrorResponse from './controllers/ErrorResponse';
 import cors from 'cors';
 import { readFileSync } from 'fs'
 import swaggerUi from 'swagger-ui-express';
+import publicationsController from './controllers/publicationsController';
+import authorsController from './controllers/authorsController';
+import tagsController from './controllers/tagsController';
+import subjectsController from './controllers/subjectsController';
+import path from 'path';
+import commentsController from './controllers/commentsController';
+import favouritesController from './controllers/favouritesController';
+import feedbacksController from './controllers/feedbacksController';
+import host from './urlEndPoint';
 
 const app: Application = express();
 const PORT = process.env.PORT || 3000;
-
-const host = '192.168.126.53';
 
 const swaggerFile = JSON.parse(readFileSync('./src/swagger/output.json', 'utf8'))
 
@@ -24,17 +29,43 @@ function notFound(res: any) {
 
 app.use(cors());
 
-app.use('/api-doc', swaggerUi.serve, swaggerUi.setup(swaggerFile))
+app.use('/api-doc', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 app.use(express.json());
 
 app.use((req,res,next) => {
-    console.log(req.path);
+    // console.log(req.path);
     next();
 })
 
 app.use("/account", accountController);
-app.use(AuthService.authorize);
+app.use("/publications", publicationsController);
+app.use("/comments", commentsController);
+app.use("/authors", authorsController);
+app.use("/tags", tagsController);
+app.use("/subjects", subjectsController);
+app.use("/feedbacks", feedbacksController);
+
+app.get("/download/:filePath/:fileName", (req, res) => { 
+    const filePath = path.join(__dirname, "uploads", req.params.filePath);
+    const dotPosition: number = req.params.filePath.lastIndexOf('.');
+    const extension = req.params.filePath.slice(dotPosition);
+    console.log(filePath, req.params.fileName.includes('.') ? req.params.fileName : req.params.fileName + extension)
+    res.download(
+        filePath, 
+        req.params.fileName.includes('.') ? req.params.fileName : req.params.fileName + extension, // Remember to include file extension
+        (err) => {
+            if (err) {
+                res.json({
+                    error: err,
+                    msg: "Problem downloading the file"
+                })
+            }
+    });
+});
+
+app.use(AuthService.requireAuthorize);
+app.use("/favourites", favouritesController);
 
 app.use("/admin", (req, res, next) => {
     (req as any).user.role === 1
